frontend/src/styles/views.scss
@import "views/view-text";
@import "views/view-image";
@import "views/view-header";
@import "views/view-table";
@import "views/view-block";
@import "views/view-row";


.editor {
  .gc-view {
    border: 2px solid lightgray;
    margin: 15px;
    cursor: pointer;

    &.gc-view-highlight {
      border: 2px solid grey;
    }
  }
}

